--- a/views/adminDashboard.ejs
+++ b/views/adminDashboard.ejs
@@ -21,6 +21,7 @@
     <li><a href="/admin/view-doctors">View Doctors</a></li> 
     <li><a href="/admin/view-patients">View Patients</a></li>
     <li><a href="/admin/bookings">View Bookings</a></li>
+    <li><a href="/admin/insights">View Insights</a></li>
   </ul>
 
   <a href="/auth/logout">Logout</a>
