Updated manage payments in admin

--- a/views/adminDashboard.ejs
+++ b/views/adminDashboard.ejs
@@ -20,6 +20,7 @@
     <li><a href="/admin/blogs-all">Search Blogs</a></li>
     <li><a href="/admin/view-doctors">View Doctors</a></li> 
     <li><a href="/admin/view-patients">View Patients</a></li>
+    <li><a href="/admin/manage-payments">Manage Payments</a></li>
     <li><a href="/admin/bookings">View Bookings</a></li>
     <li><a href="/admin/insights">View Insights</a></li>
   </ul>
