--- a/views/adminViewBlog.ejs
+++ b/views/adminViewBlog.ejs
@@ -56,11 +56,11 @@
                     <div class="form-group">
                         <label for="description">Description</label>
                         <textarea id="description" name="description" rows="5" required><%= blog.description %></textarea>
-                    </div>
+                    <!-- </div>
                     <div class="form-group">
                         <label for="summary">Summary</label>
                         <textarea id="summary" name="summary" rows="3" required><%= blog.summary %></textarea>
-                    </div>
+                    </div> -->
                     <div class="form-group">
                         <label for="categories">Categories</label>
                         <select id="categories" name="categories[]" multiple="multiple" style="width: 100%;" required>
