--- a/views/blog-upload-Form.ejs
+++ b/views/blog-upload-Form.ejs
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doctor Blog Upload</title>
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
     <style>
         .select2-container--default .select2-selection--multiple .select2-selection__choice {
             background-color: #007bff;
             border: 1px solid #007bff;
             color: white;
+        }
+        #editor {
+            height: 200px;
+            margin-bottom: 20px;
         }
     </style>
 </head>
@@ -23,10 +28,11 @@
         <input type="text" id="author" name="author" required><br><br>
         
         <label for="description">Description:</label><br>
-        <textarea id="description" name="description" rows="4" required></textarea><br><br>
-                
+        <div id="editor"></div>
+        <input type="hidden" name="description" id="description"><br><br>
+        
         <label for="image">Upload Image:</label><br>
-        <input type="file" id="image" name="image" accept="image/*" required><br><br>
+        <input type="file" id="image" name="image" accept="image/*"><br><br>
         
         <label for="categories">Categories:</label><br>
         <select id="categories" name="categories" style="width: 100%;" required>
@@ -68,6 +74,7 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
     <script>
         $(document).ready(function() {
             $('#categories').select2({
@@ -104,6 +111,27 @@
                     const newOption = new Option(subcategory, subcategory, false, false);
                     $('#subcategories').append(newOption).trigger('change');
                 });
+            });
+
+            // Initialize Quill editor
+            var quill = new Quill('#editor', {
+                theme: 'snow',
+                modules: {
+                    toolbar: [
+                        [{ 'header': [1, 2, false] }],
+                        ['bold', 'italic', 'underline'],
+                        ['image', 'blockquote', 'code-block'],
+                        [{ 'list': 'ordered'}, { 'list': 'bullet' }],
+                        [{ 'align': [] }],
+                        ['clean']
+                    ]
+                }
+            });
+
+            // Handle form submission
+            $('#blogForm').on('submit', function(e) {
+                var description = document.querySelector('input[name=description]');
+                description.value = quill.root.innerHTML;
             });
         });
     </script>
