--- a/views/subscriptionForm.ejs
+++ b/views/subscriptionForm.ejs
@@ -53,7 +53,7 @@
     </script>
 </head>
 <body>
-    <form action="/doctor/subscribe" method="post" enctype="multipart/form-data">
+    <form action="/doctor/subscribe" method="post">
         <label for="subscriptionType">Subscription Type:</label>
         <select id="subscriptionType" name="subscriptionType" onchange="updatePaymentDetails()" required>
             <option value="Free">Free</option>
